Ajout fonctionnalité de paiement d'un abonnement
